# AutoGLMUI

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  auto.py  main.py  pyproject.toml  run.py
.claude/: settings.local.json
src/: __init__.py  app.py  app_simple.py  config.py  config_simple.py  dependencies.py  logging_config.py  logging_simple.py  websocket_client.py
static/: style.css
templates/: index.html
tests/: __init__.py  conftest.py  test_config.py  test_websocket_client.py
